[package]
name = "ebpf-runtime"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
bitflags = "1.1"
libc = "0.2"

untrusted = { git = "https://github.com/flier/untrusted.git", branch = "inline_always", features = ["inline_always"] }

ebpf-core = { version = "0.1", path = "../ebpf-core" }
ebpf-derive = { version = "0.1", path = "../ebpf-derive" }
