[package]
name = "block-port"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
failure = "0.1"
pretty_env_logger = "0.3"

ebpf-loader = { version = "0.1", path = "../../ebpf-loader" }

[build-dependencies]
pretty_env_logger = "0.3"

ebpf-build = { version = "0.1", path = "../../ebpf-build" }

ebpf-runtime = { version = "0.1", path = "../../ebpf-runtime" }
xdp-runtime = { version = "0.1", path = "../../xdp-runtime" }
