[package]
name = "xdp-fwd"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
log = "0.4"
pretty_env_logger = "0.3"
structopt = "0.2"

ebpf-loader = { version = "0.1", path = "../../ebpf-loader" }

[build-dependencies]
failure = "0.1"

ebpf-build = { version = "0.1", path = "../../ebpf-build" }

ebpf-runtime = { version = "0.1", path = "../../ebpf-runtime" }
xdp-runtime = { version = "0.1", path = "../../xdp-runtime" }
